--- a/2-Spring框架相关/总结/代码/DEMO/pom.xml
+++ b/2-Spring框架相关/总结/代码/DEMO/pom.xml
@@ -38,6 +38,24 @@
             <version>4.12</version>
         </dependency>
 
+        <!--AOP-->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aspects</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>aopalliance</groupId>
+            <artifactId>aopalliance</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <plugins>
